LPS-139479 Fix Multiple Selection label overlap

--- a/modules/apps/data-engine/data-engine-js-components-web/src/main/resources/META-INF/resources/css/_field-type-checkbox-switch.scss
+++ b/modules/apps/data-engine/data-engine-js-components-web/src/main/resources/META-INF/resources/css/_field-type-checkbox-switch.scss
@@ -4,6 +4,7 @@
 	min-height: 0;
 	padding-left: 0;
 	position: relative;
+	word-break: break-word;
 
 	&.lfr-ddm-form-field-checkbox-switch-inline {
 		display: inline-block;
